--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,6 @@
 version: '3.7'
 
 services:
-  scylla:
-    image: scylladb/scylla
-    ports:
-      - "9042:9042"
-    networks:
-      - scylla-network
-    volumes:
-      - scylla-data:/var/lib/scylla
-
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
@@ -28,17 +19,12 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     ports:
-      - "9094:9094"
+      - "9092:9092"
     networks:
       - kafka-network
 
 networks:
-  scylla-network:
   kafka-network:
-
-volumes:
-  scylla-data:
-  
